ChangeLog for herdstat

2005-03-07 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version.
	* src/herdstat.cc: Added herds.xml filesize check as it seems wget
	will write a 0 byte file if fetching fails, rather than return an
	exit code.
	* src/action_pkg_handler.cc: Display a small message at the beginning
	of operator() to give the user a hint as to why it might be taking a
	while.

2005-03-06 Aaron Walker <ka0ttic@gentoo.org>

	* src/types.hh: Moved to devs.hh.
	* src/devs.hh: Moved from types.hh.
	* src/herds.cc, src/herds.hh: Moved content handler stuff to
	herds_xml_handler.{cc,hh}. Added display() member functions.
	* src/herds_xml_handler.cc, src/herds_xml_handler.hh: Moved from
	herds.{cc,hh}.
	* src/metadata.cc, src/metadata.hh: Moved to
	metadata_xml_handler.{cc,hh}.
	* src/metadata_xml_handler.cc, src/metadata_xml_handler.hh: Moved from
	metadata.{cc,hh}.
	* src/herdstat.cc, src/action_handler.hh, src/action_dev_handler.hh,
	src/action_herd_handler.hh, src/action_pkg_handler.hh: Only pass the
	herds_T object not the whole handler now that we properly store the
	herd desc in the herd_T object.
	* src/action_dev_handler.cc, src/action_herd_handler.cc,
	src/action_pkg_handler.cc: Updated with all the changes; moved most of
	the displaying code to the appropriate display() member function.

2005-03-05 Aaron Walker <ka0ttic@gentoo.org>

	* src/util.cc, src/util.hh: Added rcfile_T class originally written by
	Ciaran McCreesh for annodir.  Slightly modified to support quotes.
	Also added a portdir() function that tries to read
	make.conf/make.globals to determine PORTDIR.  Faster than calling
	portageq.
	* src/herdstat.cc: Call util::portdir() to set the portdir.
	* src/action_pkg_handler.cc: Removed portageq popen.

2005-03-04 Aaron Walker <ka0ttic@gentoo.org>

	* src/configure.ac: Change version to 0.1 (release).
	* doc/herdstat.1.in: Added example thanks to dragonheart.  Added
	PORTDIR and ECHANGELOG_USER to the Environment section.