@@ -1,6 +1,8 @@
-# $Id: Makefile.am 89 2005-03-06 05:56:28Z ka0ttic $
+# $Id$
 
 SUBDIRS = . src doc
+
+noinst_DATA = bashcomp
 
 MAINTAINERCLEANFILES = aclocal.m4 \
 		       configure \
@@ -13,4 +15,8 @@ MAINTAINERCLEANFILES = aclocal.m4 \
 		       stamp-h.in \
 		       *~
 
-EXTRA_DIST = autogen.sh
+EXTRA_DIST = autogen.sh $(noinst_DATA)
+
+install-data-local:
+	$(mkinstalldirs) $(DESTDIR)$(datadir)/bash-completion
+	$(INSTALL_DATA) bashcomp $(DESTDIR)$(datadir)/bash-completion/@PACKAGE@
